--- a/static/main.css
+++ b/static/main.css
@@ -1,20 +1,17 @@
 body {
     font-family: "Source Sans 3", sans-serif;
+    /*font-family: "Roboto Condensed", sans-serif;*/
+
     margin: 0;
     color: #0881A3;
     background-color: #F5FFFA;
 }
 
 header {
-    color: rgb(239, 62, 54);
+    /*color: rgb(239, 62, 54);*/
+    color: orangered;
     /*padding: 0 2rem;*/
-    border-bottom: 1px solid;
-}
-
-#fofejlec {
-    color: rgb(239, 62, 54);
-    border-bottom: 1px solid;
-    /*color:#0881A3;*/
+    /*border-bottom: 1px solid;*/
 }
 
 header img {
@@ -39,24 +36,25 @@ header h1 {
 
 .menu {
     /*background-color: cornflowerblue;*/
-    /*background-color: rgba(8,129,163,.8);*/
+    background-color: #0881A3;
     overflow: hidden;
 }
 .menu a {
+    float: left;
     display: block;
-    color: #0881A3;
-    padding: 1rem;
+    color: white;
+    text-align: center;
+    padding: 14px 20px;
     text-decoration: none;
-    font-size: 120%;
 }
 .menu a:hover {
+    background-color: white;
     /*color: cornflowerblue;*/
-    background-color: orangered;
-    color: white;
+    color: #0881A3;
 }
 
 #akt {
-    background-color: rgba(255, 255, 255, .9);
+    background-color: white;
     /*color: cornflowerblue;*/
     color: #0881A3;
 }
@@ -66,15 +64,21 @@ header h1 {
 main {
     /*background-color: rgba(26,26,29,.8);*/
     /*color: white;*/
-    padding: 1em;
+    padding: 1rem;
 }
 
 /*aside {padding-right: 1rem;}*/
 aside h1, aside p {padding-left: .5rem;}
 
-aside a, section a {
+aside a, section a, article a {
     text-decoration: none;
     color: orange;
+}
+
+/* =================================== ALMENÜ ================================== */
+
+nav {
+    background-color: rgba(255, 255, 255, .8);
 }
 
 nav ul {
@@ -100,7 +104,10 @@ hr {margin: 0;}
     color: white;
 }
 
-section h1 {color: rgb(239, 62, 54);}
+/* =================================== ALMENÜ ================================== */
+
+section {padding: 0 1rem;} /*ezt az aloldalak miatt tettem bele*/
+section h1 {color: orangered;}
 
 #t {
     list-style-type: circle;
@@ -109,47 +116,10 @@ section h1 {color: rgb(239, 62, 54);}
     font-variant:small-caps;
 }
 
-.italapok {
-    background-image: url('circuit.jpg');
-    background-size: 100%;
-}
-
-.os {
-    background-image: url('os-720223_1920.jpg');
-    background-size: 100%;
-    background-position: center;
-}
-
-.network {
-    background-image: url('globe-8704013_1280.jpg');
-    background-size: 100%;
-    background-position: center;
-}
-
-.rendszuzem {
-    background-image: url('technology-8676538_640.jpg');
-    background-size: 100%;
-    background-position: center;
-}
-
-.ai {
-    background-image: url('hand-4-7014643_1920.jpg');
-    background-size: 100%;
-    background-position: center;
-}
-
-.office {
-    background-image: url('laptop-5714421_640.jpg');
-    background-size: 100%;
-    background-position: center;
-}
+section a:hover {text-decoration: underline;}
 
 h3 {border-bottom: 1px solid;}
-.alap h3 {border-bottom: none;}
-
-section {padding: 0 1rem;}
-
-section a:hover {text-decoration: underline;}
+section h3, article h3 {border-bottom: none;}
 
 iframe {
     display: block;
@@ -159,7 +129,8 @@ iframe {
 footer {
     border-top: 1px solid #0881A3;
     padding: 1rem;
-    color: rgb(239, 62, 54);
+    /*color: rgb(239, 62, 54);*/
+    color: orangered;
 }
 footer img {
     display: block;
@@ -198,9 +169,9 @@ footer a:hover {
         display: grid;
         grid-template-columns: 20% 80%;
     }
-
-    header a {padding: 2rem 0;}
-
+    header a {
+        padding: 2rem 0;
+    }
     header img {
         display: block;
         border: 1px solid black;
@@ -210,18 +181,22 @@ footer a:hover {
         margin: auto;
         box-shadow: 5px 5px lightblue;
     }
+    header h1 {
+        text-align: center;
+    }
 
-    header h1 {text-align: center;}
+    .menu {
+        padding-left: 10%;
+    }
+    .menu a {
+        border-left: 1px solid white;
+    }
 
     main {
         display: grid;
         grid-template-columns: 20% 80%;
-        padding: 0 10%;
+        padding: 0 10%; 
     }
-
-    #bemutat {padding: 0;}
-
-    section div {padding: 0 10%;}
 
     p, section li {text-align: justify;}
 }
