--- a/static/index.css
+++ b/static/index.css
@@ -1,118 +1,103 @@
-.fulszoveg p {
-    font-family: "Roboto Condensed", sans-serif;
-    font-size: 1.2rem;
-    padding: 0 1rem;
-}
+.fulszoveg p {font-size: 120%;}
 
-/*#bemutat div {background-color: #F5FFFA;}*/
-
-#bemutat a:hover {
+a, a:hover {
     text-decoration: none;
 }
 
-#index h1 {
+h1 {
     margin: 0;
     font-size: 3rem;
-    color: rgb(239, 62, 54);
+    /*color: rgb(239, 62, 54);*/
+    color: orangered;
 }
 
-#index h2 {
-    color: rgb(239, 62, 54);
-    border-bottom: 1px solid;
+article h3, article p {
+    padding: .5rem;
+    margin: 0;
 }
 
-.baljobb {display: block;}
-.baljobb aside {display: none;}
-#szurke {color: grey;}
-#sarga {color: orange;}
-#lila {color:blueviolet;}
-#zold {color: green;}
-#piros {color:crimson;}
-#citrom {color:yellowgreen;}
-
-#elvalaszto {
-    max-width: 30%;
-    display: block;
-    margin: 3rem auto;
-    border-radius: 50%;
+section h3, article h3 {
+    color: cornflowerblue;
+    font-size: 200%;
 }
+
+section img, article img {display: none;}
 
 button {
+    border: none;
     padding: 0;
     display: block;
-    margin-left: 2rem;
 }
 
 button a {
     display: block;
-    color: orange;
-    background-color: white;
-    border: 1px solid orange;
-    padding: .5rem;
+    background-color: cornflowerblue;
+    color: white;
+    padding: 1rem 3rem;
 }
 
 button a:hover {
-    color: white;
-    background-color: orange;
-    border: 1px solid orange;
     text-decoration: none;
+    background-color: orange;
+    color: white;
 }
 
 #elvalaszto {
-    max-width: 15%;
+    width: 10%;
     display: block;
     margin: 3rem auto;
     border-radius: 50%;
 }
 
 @media(min-width:1081px){
-    .fulszoveg {
+    .alcim {
         display: grid;
         grid-template-columns: 50% 50%;
         padding: 0 10%;
-        /*ha ezt a fulszoveg div elemnek adjuk, akkor a fulszoveg felének veszi a 10%-át!!!*/
-
+    }
+    .alcim p {
+        padding: 1rem;
+        margin: 0;
+        background-color: rgba(255, 255, 255, .9);
+    }
+    #bev {
         background-image: url("laptop-5673901_1920.jpg");
         background-attachment: fixed;/*CSAK ENNYIT ÍRTAM HOZZÁ!!!*/
         background-repeat: no-repeat;
         background-position: center;
         background-size:cover;
     }
-    .fulszoveg div {
-        background-color: rgba(255, 255, 255, .9);
-    }
-    .fulszoveg p {
-        padding: 1rem;
-        margin: 0;
+    
+
+    h1 {
+        padding: 3rem 0;
+        text-align: center;
     }
 
-    #elvalaszto {
-        max-width: 5%;
-    }
-
-    #index {
-        display: block;
-    }
-
-    .begin {
-        padding-top: 3rem;
-    }
-
-    .alcim {
+    section {
         display: grid;
         grid-template-columns: 50% 50%;
-        /*height: 30rem;*/
+        padding-top: 1rem;
+        padding: 0 10%; /*a képernyő két szélén*/
     }
-    .alcim h1, .alcim p {
-        margin: 0;
-        background-color: rgba(255, 255, 255, .8);
-        padding: 1rem 2rem;
+    section div {padding: 2rem;}
+    section h3 {margin: 0;}
+
+    #alkezdo {
+        display: grid;
+        grid-template-columns: 25% 25% 25% 25%;
+    }
+    #alkezdo a {
+        color: #0881A3;
+        margin: 0 10%; /*a képernyő két szélén*/
+        transition: transform .2s;
+    }
+    #alkezdo a:hover {
+        transform: scale(1.05);
+        box-shadow: 0 8px 16px 0 rgba(0,0,0,.2);
     }
 
-    /*#alcimezmegaz*/
-    h1 {
-        padding: 3rem 0 3rem 20%;
-    }
+    section img, article img {display: inline; width: 100%;}
 
-    #index h2 {border: none;}
+    #elvalaszto {max-width: 5%;}
 }
